[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "scapy-j1939-22"
version = "0.1.0"
description = "Scapy contrib modules for SAE J1939-22 with J1939-21 compatibility"
readme = "README.md"
authors = [
  { name = "Liz" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "scapy>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
